--- a/src/main/resources/admin/partials/connectors.html
+++ b/src/main/resources/admin/partials/connectors.html
@@ -43,8 +43,8 @@
     </table>
 </div>
 
-<div class="ui modal" id="newConnectorDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="newConnectorDialog" ng-class="{active: newConnectorDialogVisible}" ng-keyup="escapeToClose($event)">
+    <i class="green close icon" ng-click="newConnectorDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Add New Connector
@@ -94,8 +94,8 @@
     </div>
 </div>
 
-<div class="ui modal" id="editConnectorDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="editConnectorDialog" ng-class="{active: editConnectorDialogVisible}" ng-keyup="escapeToClose($event)">
+    <i class="green close icon" ng-click="editConnectorDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Edit Connector
