--- a/src/main/resources/admin/partials/expireRules.html
+++ b/src/main/resources/admin/partials/expireRules.html
@@ -34,8 +34,8 @@
     </table>
 </div>
 
-<div class="ui modal" id="newExpireRuleDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="newExpireRuleDialog" ng-keyup="escapeToClose($event)" ng-class="{active: newExpireRuleDialogVisible}">
+    <i class="red close icon" ng-click="newExpireRuleDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Add New Expire Rule
@@ -56,8 +56,8 @@
         </div>
     </div>
 </div>
-<div class="ui modal" id="editExpireRuleDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="editExpireRuleDialog"  ng-keyup="escapeToClose($event)" ng-class="{active: editExpireRuleDialogVisible}">
+    <i class="red close icon" ng-click="editExpireRuleDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Edit Expire Rule
