--- a/src/main/resources/admin/partials/parameters.html
+++ b/src/main/resources/admin/partials/parameters.html
@@ -20,8 +20,8 @@
         </tbody>
     </table>
 </div>
-<div class="ui modal" id="editParameterDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="editParameterDialog" ng-class="{active: editParameterDialogVisible}" ng-keyup="escapeToClose($event)">
+    <i class="blue close icon" ng-click="editParameterDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Edit Value of "{{editParameter.name}}" {{editParameter.unit ? '（'+editParameter.unit+'）' : ''}}
