--- a/src/main/resources/admin/partials/upstreams.html
+++ b/src/main/resources/admin/partials/upstreams.html
@@ -59,8 +59,8 @@
     </table>
 </div>
 
-<div class="ui modal" id="newRepoDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="newRepoDialog" ng-keyup="escapeToClose($event)" ng-class="{active: newUpstreamDialogVisible}">
+    <i class="teal close icon" ng-click="newUpstreamDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Add New Upstream Repo
@@ -120,8 +120,8 @@
     </div>
 </div>
 
-<div class="ui modal" id="editRepoDialog">
-    <i class="close icon"></i>
+<div class="ui modal" id="editRepoDialog"  ng-keyup="escapeToClose($event)" ng-class="{active: editUpstreamDialogVisible}">
+    <i class="teal close icon"  ng-click="editUpstreamDialogVisible = false"></i>
 
     <div class="ui dividing center aligned header">
         Edit Upstream Repo
