--- a/src/main/resources/admin/partials/parameters.html
+++ b/src/main/resources/admin/partials/parameters.html
@@ -15,7 +15,7 @@
                         </span>
             </td>
             <td>{{parameter.name}}</td>
-            <td>{{parameter.value}} {{parameter.unit}}</td>
+            <td>{{parameter | displayParameter }} {{parameter.unit}}</td>
         </tr>
         </tbody>
     </table>
