init clients and resource handlers after config import.

--- a/src/main/resources/admin/admin.css
+++ b/src/main/resources/admin/admin.css
@@ -28,3 +28,10 @@
     margin: 0 auto;
 }
 
+#progressBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 2px;
+    background-color: seagreen;
+}
